exports[`test Lookup can provide custom render for selected text and items 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "display": "flex",
      "width": "256px",
    }
  }>
  <div
    data-radium={true}
    onClick={[Function]}
    style={
      Object {
        "background": "rgba(0,0,0,0)",
        "display": "flex",
        "height": "25px",
        "position": "relative",
        "width": "256px",
      }
    }>
    <div
      data-radium={true}
      style={
        Object {
          "height": "25px",
        }
      } />
    <div
      data-radium={true}
      style={
        Object {
          "background": "rgba(0,0,0,0)",
          "display": "flex",
          "height": "25px",
          "position": "absolute",
          "top": 0,
          "width": 256,
          "zIndex": 12,
        }
      }>
      <Chip
        backgroundColor="#e9edf1"
        color="#474c54"
        fontSize={14}
        fullWidth={true}
        lineHeight={1}
        oid="oid:1"
        onRequestRemove={[Function]}
        text="Testing 1"
        width={200} />
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "height": "25px",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }>
      <div
        data-radium={true}
        style={
          Object {
            "background": "rgba(255,255,255,1)",
            "borderBottom": "1px solid #00a9e0",
            "borderLeft": "1px solid #00a9e0",
            "borderRadius": "3px",
            "borderRight": "1px solid #00a9e0",
            "borderTop": "1px solid #00a9e0",
            "boxSizing": "border-box",
            "height": "25px",
            "padding": "3px",
            "position": "absolute",
            "top": 0,
            "width": "256px",
          }
        }>
        <div>
          <HintText
            hidden={true}
            text="" />
        </div>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "background": "rgba(0,0,0,0)",
            "border": "1px solid rgba(0,0,0,0)",
            "boxSizing": "border-box",
            "display": "inline-flex",
            "marginTop": "0px",
            "minWidth": 256,
            "padding": "3px",
            "width": 256,
            "zIndex": 11,
          }
        }>
        <input
          data-radium={true}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "background": "rgba(0,0,0,0)",
              "border": "0px solid rgba(0,0,0,0)",
              "boxSizing": "border-box",
              "color": "#31363e",
              "cursor": "initial",
              "fontFamily": "'Proxima Nova', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif",
              "fontSize": "14px",
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "width": "100%",
            }
          }
          type="text"
          value="" />
      </div>
    </div>
    <Popover
      anchorOrigin={
        Object {
          "horizontal": "left",
          "vertical": "bottom",
        }
      }
      autoCloseWhenOffScreen={true}
      onRequestClose={[Function]}
      open={true}
      targetOrigin={
        Object {
          "horizontal": "left",
          "vertical": "top",
        }
      }>
      <div
        style={
          Object {
            "background": "#ffffff",
            "border": "1px solid rgba(0,0,0,1)",
            "boxSizing": "border-box",
            "width": "256px",
          }
        }>
        <Connect(UI)
          active={true}
          hoverBackgroundColor="#262626"
          hoverColor="#fff"
          onSelectItem={[Function]} />
      </div>
    </Popover>
  </div>
</div>
`;

exports[`test Lookup can render the selected item as a Chip and then be updated with a new selected item to render as a Chip 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "display": "flex",
      "width": "256px",
    }
  }>
  <div
    data-radium={true}
    onClick={[Function]}
    style={
      Object {
        "background": "rgba(0,0,0,0)",
        "display": "flex",
        "height": "25px",
        "position": "relative",
        "width": "256px",
      }
    }>
    <div
      data-radium={true}
      style={
        Object {
          "height": "25px",
        }
      } />
    <div
      data-radium={true}
      style={
        Object {
          "background": "rgba(0,0,0,0)",
          "display": "flex",
          "height": "25px",
          "position": "absolute",
          "top": 0,
          "width": 256,
          "zIndex": 12,
        }
      }>
      <Chip
        backgroundColor="#e9edf1"
        color="#474c54"
        fontSize={14}
        fullWidth={true}
        lineHeight={1}
        oid={1}
        onRequestRemove={[Function]}
        text="Testing 2"
        width={200} />
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "height": "25px",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }>
      <div
        data-radium={true}
        style={
          Object {
            "background": "rgba(255,255,255,1)",
            "borderBottom": "1px solid #00a9e0",
            "borderLeft": "1px solid #00a9e0",
            "borderRadius": "3px",
            "borderRight": "1px solid #00a9e0",
            "borderTop": "1px solid #00a9e0",
            "boxSizing": "border-box",
            "height": "25px",
            "padding": "3px",
            "position": "absolute",
            "top": 0,
            "width": "256px",
          }
        }>
        <div>
          <HintText
            hidden={true}
            text="" />
        </div>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "background": "rgba(0,0,0,0)",
            "border": "1px solid rgba(0,0,0,0)",
            "boxSizing": "border-box",
            "display": "inline-flex",
            "marginTop": "0px",
            "minWidth": 256,
            "padding": "3px",
            "width": 256,
            "zIndex": 11,
          }
        }>
        <input
          data-radium={true}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "background": "rgba(0,0,0,0)",
              "border": "0px solid rgba(0,0,0,0)",
              "boxSizing": "border-box",
              "color": "#31363e",
              "cursor": "initial",
              "fontFamily": "\'Proxima Nova\', \'Lucida Sans Unicode\', \'Lucida Grande\', sans-serif",
              "fontSize": "14px",
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "width": "100%",
            }
          }
          type="text"
          value="" />
      </div>
    </div>
    <Popover
      anchorOrigin={
        Object {
          "horizontal": "left",
          "vertical": "bottom",
        }
      }
      autoCloseWhenOffScreen={true}
      onRequestClose={[Function]}
      open={true}
      targetOrigin={
        Object {
          "horizontal": "left",
          "vertical": "top",
        }
      }>
      <div
        style={
          Object {
            "background": "#ffffff",
            "border": "1px solid rgba(0,0,0,1)",
            "boxSizing": "border-box",
            "width": "256px",
          }
        }>
        <Connect(UI)
          active={true}
          hoverBackgroundColor="#262626"
          hoverColor="#fff"
          onSelectItem={[Function]} />
      </div>
    </Popover>
  </div>
</div>
`;

exports[`test Lookup can render the selected item as a Chip and then be updated with a new selected item to render as a Chip 2`] = `
<div
  data-radium={true}
  style={
    Object {
      "display": "flex",
      "width": "256px",
    }
  }>
  <div
    data-radium={true}
    onClick={[Function]}
    style={
      Object {
        "background": "rgba(0,0,0,0)",
        "display": "flex",
        "height": "25px",
        "position": "relative",
        "width": "256px",
      }
    }>
    <div
      data-radium={true}
      style={
        Object {
          "height": "25px",
        }
      } />
    <div
      data-radium={true}
      style={
        Object {
          "background": "rgba(0,0,0,0)",
          "display": "flex",
          "height": "25px",
          "position": "absolute",
          "top": 0,
          "width": 256,
          "zIndex": 12,
        }
      }>
      <Chip
        backgroundColor="#e9edf1"
        color="#474c54"
        fontSize={14}
        fullWidth={true}
        lineHeight={1}
        oid="oid:2"
        onRequestRemove={[Function]}
        text="Testing 2"
        width={200} />
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "height": "25px",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }>
      <div
        data-radium={true}
        style={
          Object {
            "background": "rgba(255,255,255,1)",
            "borderBottom": "1px solid #00a9e0",
            "borderLeft": "1px solid #00a9e0",
            "borderRadius": "3px",
            "borderRight": "1px solid #00a9e0",
            "borderTop": "1px solid #00a9e0",
            "boxSizing": "border-box",
            "height": "25px",
            "padding": "3px",
            "position": "absolute",
            "top": 0,
            "width": "256px",
          }
        }>
        <div>
          <HintText
            hidden={true}
            text="" />
        </div>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "background": "rgba(0,0,0,0)",
            "border": "1px solid rgba(0,0,0,0)",
            "boxSizing": "border-box",
            "display": "inline-flex",
            "marginTop": "0px",
            "minWidth": 256,
            "padding": "3px",
            "width": 256,
            "zIndex": 11,
          }
        }>
        <input
          data-radium={true}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "background": "rgba(0,0,0,0)",
              "border": "0px solid rgba(0,0,0,0)",
              "boxSizing": "border-box",
              "color": "#31363e",
              "cursor": "initial",
              "fontFamily": "\'Proxima Nova\', \'Lucida Sans Unicode\', \'Lucida Grande\', sans-serif",
              "fontSize": "14px",
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "width": "100%",
            }
          }
          type="text"
          value="" />
      </div>
    </div>
    <Popover
      anchorOrigin={
        Object {
          "horizontal": "left",
          "vertical": "bottom",
        }
      }
      autoCloseWhenOffScreen={true}
      onRequestClose={[Function]}
      open={true}
      targetOrigin={
        Object {
          "horizontal": "left",
          "vertical": "top",
        }
      }>
      <div
        style={
          Object {
            "background": "#ffffff",
            "border": "1px solid rgba(0,0,0,1)",
            "boxSizing": "border-box",
            "width": "256px",
          }
        }>
        <Connect(UI)
          active={true}
          hoverBackgroundColor="#262626"
          hoverColor="#fff"
          onSelectItem={[Function]} />
      </div>
    </Popover>
  </div>
</div>
`;

exports[`test Lookup defaults to being closed 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "display": "flex",
      "width": "256px",
    }
  }>
  <div
    data-radium={true}
    onClick={[Function]}
    style={
      Object {
        "background": "rgba(0,0,0,0)",
        "display": "flex",
        "height": "25px",
        "position": "relative",
        "width": "256px",
      }
    }>
    <div
      data-radium={true}
      style={
        Object {
          "height": "25px",
        }
      } />
    <div
      data-radium={true}
      style={
        Object {
          "height": "25px",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }>
      <div
        data-radium={true}
        style={
          Object {
            "background": "rgba(255,255,255,1)",
            "borderBottom": "1px solid #878c94",
            "borderLeft": "1px solid #878c94",
            "borderRadius": "3px",
            "borderRight": "1px solid #878c94",
            "borderTop": "1px solid #878c94",
            "boxSizing": "border-box",
            "height": "25px",
            "padding": "3px",
            "position": "absolute",
            "top": 0,
            "width": "256px",
          }
        }>
        <div>
          <HintText
            hidden={false}
            text="" />
        </div>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "background": "rgba(0,0,0,0)",
            "border": "1px solid rgba(0,0,0,0)",
            "boxSizing": "border-box",
            "display": "inline-flex",
            "marginTop": "0px",
            "minWidth": 256,
            "padding": "3px",
            "width": 256,
            "zIndex": 11,
          }
        }>
        <input
          data-radium={true}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "background": "rgba(0,0,0,0)",
              "border": "0px solid rgba(0,0,0,0)",
              "boxSizing": "border-box",
              "color": "#31363e",
              "cursor": "initial",
              "fontFamily": "'Proxima Nova', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif",
              "fontSize": "14px",
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "width": "100%",
            }
          }
          type="text"
          value="" />
      </div>
    </div>
    <Popover
      anchorOrigin={
        Object {
          "horizontal": "left",
          "vertical": "bottom",
        }
      }
      autoCloseWhenOffScreen={true}
      onRequestClose={[Function]}
      open={false}
      targetOrigin={
        Object {
          "horizontal": "left",
          "vertical": "top",
        }
      }>
      <div
        style={
          Object {
            "background": "#ffffff",
            "border": "1px solid rgba(0,0,0,1)",
            "boxSizing": "border-box",
            "width": "256px",
          }
        }>
        <Connect(UI)
          active={false}
          hoverBackgroundColor="#262626"
          hoverColor="#fff"
          onSelectItem={[Function]} />
      </div>
    </Popover>
  </div>
</div>
`;

exports[`test Lookup renders as a TextField when not open 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "display": "flex",
      "width": "256px",
    }
  }>
  <div
    data-radium={true}
    onClick={[Function]}
    style={
      Object {
        "background": "rgba(0,0,0,0)",
        "display": "flex",
        "height": "25px",
        "position": "relative",
        "width": "256px",
      }
    }>
    <div
      data-radium={true}
      style={
        Object {
          "height": "25px",
        }
      } />
    <div
      data-radium={true}
      style={
        Object {
          "height": "25px",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }>
      <div
        data-radium={true}
        style={
          Object {
            "background": "rgba(255,255,255,1)",
            "borderBottom": "1px solid #878c94",
            "borderLeft": "1px solid #878c94",
            "borderRadius": "3px",
            "borderRight": "1px solid #878c94",
            "borderTop": "1px solid #878c94",
            "boxSizing": "border-box",
            "height": "25px",
            "padding": "3px",
            "position": "absolute",
            "top": 0,
            "width": "256px",
          }
        }>
        <div>
          <HintText
            hidden={false}
            text="hint text" />
        </div>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "background": "rgba(0,0,0,0)",
            "border": "1px solid rgba(0,0,0,0)",
            "boxSizing": "border-box",
            "display": "inline-flex",
            "marginTop": "0px",
            "minWidth": 256,
            "padding": "3px",
            "width": 256,
            "zIndex": 11,
          }
        }>
        <input
          data-radium={true}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "background": "rgba(0,0,0,0)",
              "border": "0px solid rgba(0,0,0,0)",
              "boxSizing": "border-box",
              "color": "#31363e",
              "cursor": "initial",
              "fontFamily": "'Proxima Nova', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif",
              "fontSize": "14px",
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "width": "100%",
            }
          }
          type="text"
          value="" />
      </div>
    </div>
    <Popover
      anchorOrigin={
        Object {
          "horizontal": "left",
          "vertical": "bottom",
        }
      }
      autoCloseWhenOffScreen={true}
      onRequestClose={[Function]}
      open={false}
      targetOrigin={
        Object {
          "horizontal": "left",
          "vertical": "top",
        }
      }>
      <div
        style={
          Object {
            "background": "#ffffff",
            "border": "1px solid rgba(0,0,0,1)",
            "boxSizing": "border-box",
            "width": "256px",
          }
        }>
        <Connect(UI)
          active={false}
          hoverBackgroundColor="#262626"
          hoverColor="#fff"
          onSelectItem={[Function]} />
      </div>
    </Popover>
  </div>
</div>
`;

exports[`test Lookup renders the explicitly set selected item as a Chip 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "display": "flex",
      "width": "256px",
    }
  }>
  <div
    data-radium={true}
    onClick={[Function]}
    style={
      Object {
        "background": "rgba(0,0,0,0)",
        "display": "flex",
        "height": "25px",
        "position": "relative",
        "width": "256px",
      }
    }>
    <div
      data-radium={true}
      style={
        Object {
          "height": "25px",
        }
      } />
    <div
      data-radium={true}
      style={
        Object {
          "background": "rgba(0,0,0,0)",
          "display": "flex",
          "height": "25px",
          "position": "absolute",
          "top": 0,
          "width": 256,
          "zIndex": 12,
        }
      }>
      <Chip
        backgroundColor="#e9edf1"
        color="#474c54"
        fontSize={14}
        fullWidth={true}
        lineHeight={1}
        oid={0}
        onRequestRemove={[Function]}
        text="Testing 1"
        width={200} />
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "height": "25px",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }>
      <div
        data-radium={true}
        style={
          Object {
            "background": "rgba(255,255,255,1)",
            "borderBottom": "1px solid #00a9e0",
            "borderLeft": "1px solid #00a9e0",
            "borderRadius": "3px",
            "borderRight": "1px solid #00a9e0",
            "borderTop": "1px solid #00a9e0",
            "boxSizing": "border-box",
            "height": "25px",
            "padding": "3px",
            "position": "absolute",
            "top": 0,
            "width": "256px",
          }
        }>
        <div>
          <HintText
            hidden={true}
            text="" />
        </div>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "background": "rgba(0,0,0,0)",
            "border": "1px solid rgba(0,0,0,0)",
            "boxSizing": "border-box",
            "display": "inline-flex",
            "marginTop": "0px",
            "minWidth": 256,
            "padding": "3px",
            "width": 256,
            "zIndex": 11,
          }
        }>
        <input
          data-radium={true}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "background": "rgba(0,0,0,0)",
              "border": "0px solid rgba(0,0,0,0)",
              "boxSizing": "border-box",
              "color": "#31363e",
              "cursor": "initial",
              "fontFamily": "'Proxima Nova', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif",
              "fontSize": "14px",
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "width": "100%",
            }
          }
          type="text"
          value="" />
      </div>
    </div>
    <Popover
      anchorOrigin={
        Object {
          "horizontal": "left",
          "vertical": "bottom",
        }
      }
      autoCloseWhenOffScreen={true}
      onRequestClose={[Function]}
      open={true}
      targetOrigin={
        Object {
          "horizontal": "left",
          "vertical": "top",
        }
      }>
      <div
        style={
          Object {
            "background": "#ffffff",
            "border": "1px solid rgba(0,0,0,1)",
            "boxSizing": "border-box",
            "width": "256px",
          }
        }>
        <Connect(UI)
          active={true}
          hoverBackgroundColor="#262626"
          hoverColor="#fff"
          onSelectItem={[Function]} />
      </div>
    </Popover>
  </div>
</div>
`;

exports[`test Lookup renders the explicitly set selected item as a Chip 2`] = `
<div
  data-radium={true}
  style={
    Object {
      "display": "flex",
      "width": "256px",
    }
  }>
  <div
    data-radium={true}
    onClick={[Function]}
    style={
      Object {
        "background": "rgba(0,0,0,0)",
        "display": "flex",
        "height": "25px",
        "position": "relative",
        "width": "256px",
      }
    }>
    <div
      data-radium={true}
      style={
        Object {
          "height": "25px",
        }
      } />
    <div
      data-radium={true}
      style={
        Object {
          "background": "rgba(0,0,0,0)",
          "display": "flex",
          "height": "25px",
          "position": "absolute",
          "top": 0,
          "width": 256,
          "zIndex": 12,
        }
      }>
      <Chip
        backgroundColor="#e9edf1"
        color="#474c54"
        fontSize={14}
        fullWidth={true}
        lineHeight={1}
        oid="oid:1"
        onRequestRemove={[Function]}
        text="Testing 1"
        width={200} />
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "height": "25px",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }>
      <div
        data-radium={true}
        style={
          Object {
            "background": "rgba(255,255,255,1)",
            "borderBottom": "1px solid #00a9e0",
            "borderLeft": "1px solid #00a9e0",
            "borderRadius": "3px",
            "borderRight": "1px solid #00a9e0",
            "borderTop": "1px solid #00a9e0",
            "boxSizing": "border-box",
            "height": "25px",
            "padding": "3px",
            "position": "absolute",
            "top": 0,
            "width": "256px",
          }
        }>
        <div>
          <HintText
            hidden={true}
            text="" />
        </div>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "background": "rgba(0,0,0,0)",
            "border": "1px solid rgba(0,0,0,0)",
            "boxSizing": "border-box",
            "display": "inline-flex",
            "marginTop": "0px",
            "minWidth": 256,
            "padding": "3px",
            "width": 256,
            "zIndex": 11,
          }
        }>
        <input
          data-radium={true}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "background": "rgba(0,0,0,0)",
              "border": "0px solid rgba(0,0,0,0)",
              "boxSizing": "border-box",
              "color": "#31363e",
              "cursor": "initial",
              "fontFamily": "'Proxima Nova', 'Lucida Sans Unicode', 'Lucida Grande', sans-serif",
              "fontSize": "14px",
              "outline": "none",
              "padding": 0,
              "position": "relative",
              "width": "100%",
            }
          }
          type="text"
          value="" />
      </div>
    </div>
    <Popover
      anchorOrigin={
        Object {
          "horizontal": "left",
          "vertical": "bottom",
        }
      }
      autoCloseWhenOffScreen={true}
      onRequestClose={[Function]}
      open={true}
      targetOrigin={
        Object {
          "horizontal": "left",
          "vertical": "top",
        }
      }>
      <div
        style={
          Object {
            "background": "#ffffff",
            "border": "1px solid rgba(0,0,0,1)",
            "boxSizing": "border-box",
            "width": "256px",
          }
        }>
        <Connect(UI)
          active={true}
          hoverBackgroundColor="#262626"
          hoverColor="#fff"
          onSelectItem={[Function]} />
      </div>
    </Popover>
  </div>
</div>
`;
